# cipher-topology-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  PROJECT_DESCRIPTION.md  PROJECT_MANIFEST.md  README.md  REPOSITORY_DESCRIPTION.md  ROADMAP.md  RUNLOG.md  STATUS_AND_ROADMAP.md  pyproject.toml
bibliography/: BIBLIOGRAPHY_STATUS.md  references.bib
configs/: cubical_smoke_test.json  experiment_32rep.json  experiment_64rep.json  experiment_v0.json  experiment_weak_controls_64rep.json  experiment_weak_controls_embedding_sensitivity_64rep.json  experiment_weak_controls_replication_128rep.json  experiment_weak_controls_seed_robustness_64rep.json  experiment_weak_controls_seed_robustness_smoke.json  experiment_weak_controls_seed_sweep_20260701_64rep.json  experiment_weak_controls_seed_sweep_20260702_64rep.json  experiment_weak_controls_smoke.json  external_dieharder_8mb.json  manuscript_30rep.json  smoke_test.json
docs/: BASELINE_RUN_PLAN.md  CONTRIBUTION_BOUNDARY.md  FORWARD_LEARNING_ROADMAP.md  architecture_separation.md  benchmark_roadmap.md  claim_boundary_checklist.md  contribution_boundary.md  cv_valuation_ingestion_bridge.md  data_dictionary.md  development_backlog.md  eod_notes_2026-05-23.md  evaluation_readiness_report.md  evaluation_science_proof_packet.md  evidence_reconciliation_checklist.md  evidence_register.md  evidence_register_weak_controls.md  evidence_register_weak_controls_seed_robustness.md  evidence_register_weak_controls_seed_robustness_smoke.md  evidence_register_weak_controls_smoke.md  experiment_expansion_plan.md  latex_workflow.md  (+27 more)
(+108 files in other folders)
